# Python-Assistant

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.md
.claude/skills/: .mtskills-source.jsonl
.claude/skills/frontend-design/: SKILL.md
config/: bash_blacklist.txt  model.json.example
docs/: ARCHITECTURE.md
src/personal_assistant/: __init__.py  __main__.py  cli.py  config.py  web.py
src/personal_assistant/core/: __init__.py  agent.py  plugin.py  protocol.py  skill.py  tool.py
src/personal_assistant/llm/: __init__.py  client.py
src/personal_assistant/plugins/: __init__.py
src/personal_assistant/skills/: README.md  __init__.py
src/personal_assistant/skills/bilibili_downloader/: SKILL.md  bilibili_cookies.txt  bilibili_downloader.py  generate_cookies.py
src/personal_assistant/skills/fileorg/: SKILL.md  fileorg.py
src/personal_assistant/skills/news/: SKILL.md  news.py
src/personal_assistant/skills/recipe/: SKILL.md  recipe.py
src/personal_assistant/skills/skill_creator/: SKILL.md  create_skill.py
src/personal_assistant/skills/weather/: SKILL.md  weather.py
src/personal_assistant/sync/: __init__.py
src/personal_assistant/tools/: README.md  __init__.py  bash.py  compress_context.py
tests/: conftest.py  test_acceptance_real_llm.py  test_agent.py  test_context_compression.py  test_skills.py  test_smoke.py  test_tools.py  test_websearch_real.py
web/: index.html  mobile.html  test-table.html
web/css/: chat.css  components.css  editor.css  layout.css  variables.css
web/js/: api.js  blacklist.js  chat.js  config.js  main.js  skills.js  tools.js  utils.js
(+2 files in other folders)
